# tower-lsp

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
examples/: custom_notification.rs  stdio.rs  tcp.rs  websocket.rs
src/: jsonrpc.rs  lib.rs  service.rs  transport.rs
src/jsonrpc/: request.rs  router.rs
src/service/: client.rs  layers.rs  pending.rs
src/service/client/: pending.rs
tower-lsp-macros/: Cargo.toml
tower-lsp-macros/src/: lib.rs
