[package]
name = "deno_tower_lsp"
version = "0.2.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>", "the Deno authors"]
edition = "2021"
rust-version = "1.70.0"
description = "This is a fork of https://crates.io/crates/tower-lsp, used in Deno. At the moment only floating patches."
license = "MIT"
readme = "README.md"
exclude = ["FEATURES.md"]

[features]
default = ["runtime-tokio"]
runtime-agnostic = ["async-codec-lite"]
runtime-tokio = ["tokio", "tokio-util"]
proposed = ["lsp-types/proposed"]

[dependencies]
async-codec-lite = { version = "0.0", optional = true }
async-trait = "0.1"
auto_impl = "1.0"
bytes = "1.5"
dashmap = "5.5"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
httparse = "1.8"
lsp-types = "0.97.0"
memchr = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", optional = true }
tokio-util = { version = "0.7", optional = true, features = ["codec"] }
tower-lsp-macros = { version = "0.9", path = "./tower-lsp-macros" }
tower = { version = "0.4", default-features = false, features = ["util"] }
tracing = "0.1"

[dev-dependencies]
async-tungstenite = { version = "0.23.0", features = ["tokio-runtime"] }
tracing-subscriber = "0.3"
tokio = { version = "1.35", features = ["io-util", "io-std", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }
ws_stream_tungstenite = { version = "0.11.0", features = ["tokio_io"] }

[workspace]
members = [".", "./tower-lsp-macros"]
default-members = ["."]
