[package]
name = "deno_tower_lsp_macros"
version = "0.10.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>", "the Deno authors"]
description = "This is a fork of https://crates.io/crates/tower-lsp macros, used in Deno. At the moment only floating patches."
edition = "2021"
rust-version = "1.56.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ebkalderon/tower-lsp"
repository = "https://github.com/ebkalderon/tower-lsp"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
